# rewatch

./: .gitignore  Cargo.toml  CompilerConfigurationSpec.md  README.md  package.json  postinstall.js  release.sh  rewatch  sync_upstream.sh
.github/workflows/: build.yml  test.yml
benches/: base_bench.rs
dir/: foo.re
dir/subdir/: bar.re  baz.re
docs/debug/.fingerprint/rewatch-799bc61149651e76/: doc-bin-rewatch  doc-bin-rewatch.json
docs/doc/: search-index.js  source-files.js
docs/doc/rewatch/: all.html  fn.main.html  index.html  sidebar-items.js
docs/doc/rewatch/bsconfig/: enum.Error.html  enum.OneOrMore.html  enum.Source.html  enum.Subdirs.html  fn.read.html  fn.to_qualified_without_children.html  index.html  sidebar-items.js  struct.PackageSpec.html  struct.QualifiedSource.html  struct.Reason.html  struct.T.html  struct.Warnings.html
docs/doc/rewatch/structure_hashmap/: fn.read_structure.html  index.html  sidebar-items.js
docs/doc/rewatch/watcher/: fn.async_watch.html  index.html  sidebar-items.js
docs/doc/src/rewatch/: bsconfig.rs.html  build.rs.html  main.rs.html  structure_hashmap.rs.html  watcher.rs.html
src/: bsconfig.rs  build.rs  build_types.rs  clean.rs  cli.rs  cmd.rs  config.rs  grouplike.rs  helpers.rs  lib.rs  lock.rs  logs.rs  main.rs  package_tree.rs  queue.rs  sourcedirs.rs  structure.rs  structure_hashmap.rs  watcher.rs
testrepo/: .gitignore  bsconfig.json  package.json
testrepo/src/: Test.mjs  Test.res
tests/: compile.sh  lock.sh  suffix.sh  suite-ci.sh  suite.sh  utils.sh  watch--change-file.sh  watch.sh
tests/snapshots/: dependency-cycle.txt  remove-file.txt  rename-file-internal-dep-namespace.txt  rename-file-internal-dep.txt  rename-file-with-interface.txt  rename-file.txt  rename-interface-file.txt
tests/testrepo_pnpm/: bsconfig.json  package.json  pnpm-lock.yaml
tests/testrepo_yarn/: bsconfig.json  package.json
(+13 files in other folders)
