[package]
name = "rewatch"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
notify = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0" }
ahash = "0.8.2"
convert_case = "0.6.0"
linked_hash_set = "0.1.4"
rayon = "1.6.1"

[profile.release]
codegen-units = 1
lto = true
