[package]
name = "rewatch"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.26"
notify = { version = "5.1.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = { version = "1.0.93" }
ahash = "0.8.3"
convert_case = "0.6.0"
linked_hash_set = "0.1.4"
rayon = "1.6.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.10.0"
indicatif = "0.17.3"
console = "0.15.5"
blake3 = "1.3.3"
notify-debouncer-mini = { version = "0.2.0" }
regex = "1.7.1"


[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "base_bench"
harness = false
